# Semester-2-MPhys

ChargeAmpCLStudies/: beta_vals.txt  envelope.py  lambda.py  numerical_aperture.py  pulse_duration.py  pulse_energies.txt  refractive_index.py
ChargeAmpCLStudies/PickleFiles/: NAv_range_pickle.pickle  SiCData.pickle  envelope.pickle  full_data_NAv_pickle.pickle  full_data_l_pickle.pickle  full_data_nr_pickle.pickle  full_data_tau_pickle.pickle  l_range_pickle.pickle  nr_range_pickle.pickle  tau_range_pickle.pickle  uniformity.pickle
SiliconCarbideGarfield/: CMakeLists.txt  MediumSiliconCarbide.cc  MediumSiliconCarbide.hh  impulse_response.txt  mesh_generation.py  plot.py  python_sim.py  sic_diode.C  silicon_diode.C
